--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </nav>
-  <p> Home Page link check </p>
+  <p style="color: purple;"> <strong>Home Page link check</strong> </p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
